[package]
name = "actix-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix-service"
path = "src/main.rs"

[dependencies]

# Runtime and futures
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3"

# The web framework
actix-web = "4.2.1"
actix-rt = "2.7.0"

# For making (asynchronous) requests
reqwest = { version = "0.11.13", features = ["default", "json"] }
hyper = "0.14.23"    # needed bc reqwest does not reexport the status codes


# Handler related crates
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"
validator = "0.16.0"
validator_derive = "0.16.0"

# Logging related crates
env_logger = "0.10.0"
log = "0.4.8"

# Database related crates
tokio-postgres = "0.7.7"
chrono = { version = "0.4.11", features = ["serde"] }
bb8 = { version = "0.8.0" }
bb8-postgres =  { version = "0.8.1", features = ["with-chrono-0_4"] }

# Metrics related crates
prometheus = "0.13.3"
actix-web-prom = "0.6.0"