[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[lib]
name = "downloader"
path = "src/lib.rs"

[[bin]]
name = "fetch"
path = "src/main.rs"

[[bin]]
name = "json"
path = "src/json.rs"

[dependencies]
# tokio runtime and utilities
tokio = { version = "1.22.0", features = ["full"] }

futures = "0.3"
futures-util = "0.3.1"
bytes = "1.3.0"

# communication with kafka
rdkafka = "0.29.0"

# for downloading images
reqwest = { version = "0.11.13", features = ["json"] }

# image processing
image = "0.24.5"

# allows for uploading stuff to s3
rust-s3 = "0.32.3"

# what could this be for...
log = "0.4.8"
simple_logger = "4.0.0"

# config from parameters/env
structopt = "0.3"

# parsing and deparsing messages received via kafka
serde = "1.0.104"
serde_json = "1.0.48"
