[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
#rdkafka-sys = { path = "rdkafka-sys", version = "4.3.0", default-features = false }
futures-channel = "0.3.0"
futures-executor = { version = "0.3.0", optional = true }
futures-util = { version = "0.3.0", default-features = false }
libc = "0.2.0"
log = "0.4.8"
serde = { version = "1.0.0", features = ["derive"] }
serde_derive = "1.0.0"
serde_json = "1.0.0"
slab = "0.4"
tokio = { version = "1.0", features = ["rt", "time"], optional = true }
tracing = { version = "0.1.30", optional = true }
chrono = "0.4.0"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
backoff = "0.4.0"
clap = "4.0.27"
futures = "0.3.0"
hdrhistogram = "7.0.0"
maplit = "1.0.2"
rand = "0.8.5"
regex = "1.1.6"
smol = "1.2.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
